--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "nodemailer": "^6.9.13",
     "nodemailer-express-handlebars": "^6.1.2",
     "nodemon": "^3.1.0"
-  }
+  },
+  "type": "module"
 }
