--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "auth-guard",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js"
   },
-  "author": "",
+  "author": "salma ahmed attia",
   "license": "ISC",
-  "description": "",
+  "description": "Authentication and Authorization package for Node.js/Express applications.",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
